--- a/client/src/pages/Simulacion/simulacion.scss
+++ b/client/src/pages/Simulacion/simulacion.scss
@@ -106,3 +106,13 @@
     }
   }
 }
+
+.airport-marker {
+  width: 18px;
+  height: 18px;
+  background-color: #0077ff;
+  border: 3px solid white;
+  border-radius: 50%;
+  box-shadow: 0 0 6px rgba(0,0,0,0.6);
+}
+
